# Project officially started Sep 1, 2000
# Build 1.0.0.0 - Released Mar 23, 2001
! AFFECT AREAS BACKSTAB BASH BERZERK
BREAK BRIBE BUG BUY CAST CHECK
CLIMB CLOSE COMMANDS COMPARE CONSIDER COPY
CREATE CREDITS DESCRIPTION DESTROY DETRAP DIRT
DISARM DOWN DRINK DROP EAST EAT
EMOTE EQUIPMENT EXAMINE EXITS FILL FLEE
FOLLOW GET GIVE GO GROUP GTELL
HANDS HELP HIDE HOLD INVENTORY KILL
LIST LISTEN LOCK LOOK MODIFY NOFOLLOW
NORTH OBSERVE OPEN ORDER PASSWORD PEEK
PICK POISON PRACTICE PRAY PRAYERS PULL
PUSH PUT QUIET QUIT READ RECALL
REMOVE REPLY REPORT RESCUE REST REVOKE
SAVE SAY SCORE SCROLLCOPY SEARCH SELL
SING SKILLS SLEEP SNEAK SOCIALS SONGS
SOUTH SPELLS SPLIT STAND STEAL SWIPE
SYSMSGS TAKE TEACH TELL TRACK TRAIN
TRAP TRIP TURN UNLOCK UP WAKE
WEAR WEST WHO WHOIS WHOMP WIELD
WIMPY WRITE
Build 1.1.0.0 - Released October, 2001
Build 1.25(2.5) - Released Feb 21, 2002
! AFFECT ANSI ARCHELP ARCTOPICS AREAS
AUTOASSIST AUTOEXITS AUTOGOLD AUTOLOOT BACKSTAB BASH
BERZERK BREAK BRIBE BUG BUY CAST
CHANNELS CHECK CLIMB CLOSE COMMANDS COMPARE
CONSIDER COPY CREATE CREDITS DESCRIPTION DESTROY
DETRAP DIRT DISARM DOWN DRAIN DRINK
DROP DUMPFILE EAST EAT EMOTE EQUIPMENT
EXAMINE EXITS FILL FLEE FOLLOW GET
GIVE GO GROUP GTELL HANDS HELP
HIDE HOLD IMPORT INVENTORY KICK KILL
LINK LIST LISTEN LOCK LOOK MODIFY
NOANSI NOFOLLOW NORTH OBSERVE OPEN ORDER
OUTFIT PASSWORD PEEK PICK POISON PRACTICE
PRAY PRAYERS PULL PUSH PUT QUALIFY
QUIET QUIT READ RECALL REMOVE REPLY
REPORT RESCUE RESET REST REVOKE SAVE
SAY SCORE SCROLLCOPY SEARCH SELL SING
SKILLS SLEEP SNEAK SOCIALS SONGS SOUTH
SPELLS SPLIT STAND STEAL SWIM SWIPE
SYSMSGS TAKE TEACH TELL TOPICS TRACK
TRAIN TRAP TRIP TURN UNLINK UNLOADHELP
UNLOCK UP VALUE WAKE WEAR WEST
WHO WHOIS WHOMP WIELD WIMPY WRITE
XML YELL
# Build 3.0.0.0 - Released Nov 23, 2002
ANSI support is new
CoffeeMud now has a web server! Yipee!
Add Area objects and Tables and Affect/Properties!
Allow classes and directories to be assigned in the INI file in addition to the default path.