@@ -2381,7 +2381,22 @@ Example  : tagturf untag\n\r\
 The thief tags this place as their "turf" or, if they are a part of a clan, \
 their clan's "turf".  Other thieves will not be able to use their skills \
 here.  The tag can only be seen by the tagging thief, and those who can see \
-hidden things.
+hidden things.  A tag can be removed only by a turf war.
+
+TURF_WAR=<ABILITY>\
+Usage    : TURFWAR\n\r\
+Example  : turfwar\n\r\
+The thief declares the tagged room he is in to be in dispute.  Any turf tag \
+on the room will be removed unless the thief who tagged the room successfully \
+defends the turf in combat.  After declaring the turf war, the tagging thief \
+will be notified that it is in dispute.  The tagger has until the expiration \
+of the war to respond to the challenge.  As soon as the tagger arrives in the \
+disputed room, the tagger and the challenger will immediately be entered into \
+combat.  The combat will be non-lethal, with the loser merely being recalled \
+instead of dying.  After combat begins, the first combatant to be forced from \
+the disputed room (e.g. by non-lethal "death"), will be the winner.\n\r\
+\n\r\
+A TurfWar can only be infrequently declared.
 
 UNDERGROUNDCONNECTIONS=UNDERGROUND_CONNECTIONS
 UNDERGROUND_CONNECTIONS=<ABILITY>\
